feat spark: SPYT-232 fixes (#135)
* changes

* changes

* changes

* changes

* changes

* changes